[project]
name = "pivotir"
version = "0.0.1"
description = "Autonomous DFIR investigation: a Custom MCP Server + multi-agent orchestrator for the SANS FindEvil hackathon."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["dfir", "mcp", "incident-response", "forensics", "agent"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.0",
    "duckdb>=1.0",
    "polars>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-evtx>=0.7",
]

[project.optional-dependencies]
orchestrator = [
    "claude-agent-sdk>=0.1",
]
volatility = [
    "volatility3>=2.0",
]
network = [
    "pyshark>=0.6",
]
yara = [
    "yara-python>=4.5",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
pivotir = "pivotir.server:main"

[build-system]
requires = ["hatchling>=1.20"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pivotir"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
